--- a/css/slider.css
+++ b/css/slider.css
@@ -174,82 +174,88 @@
 
 /* media code */
 
-.media-wrapper {
+.media-box-holder {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #f1f4fd;
-    flex-direction: column;
-}
-
-.media-container {
+    /* background: #f1f4fd; */
+    width: 100%;
+    border: 1px solid black;
+  }
+  
+  .container {
     max-width: 1200px;
     width: 95%;
-    text-align: center;
-}
+    border: 1px solid black;
 
-.media-slider-wrapper {
+  }
+  
+  .slider-wrapper {
     position: relative;
-    margin-bottom: 20px;
-}
-
-.media-slider-wrapper .media-image-list {
+  }
+  
+  .slider-wrapper .slide-button {
+    position: absolute;
+    top: 50%;
+    outline: none;
+    border: none;
+    height: 50px;
+    width: 50px;
+    z-index: 5;
+    color: #fff;
+    display: flex;
+    cursor: pointer;
+    font-size: 2.2rem;
+    background: #000;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transform: translateY(-50%);
+  }
+  
+  .slider-wrapper .slide-button:hover {
+    background: #404040;
+  }
+  
+  .slider-wrapper .slide-button#prev-slide {
+    left: -25px;
+    display: none;
+  }
+  
+  .slider-wrapper .slide-button#next-slide {
+    right: -25px;
+  }
+  
+  .slider-wrapper .image-list {
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    grid-template-columns: repeat(10, 1fr);
     gap: 18px;
     font-size: 0;
     list-style: none;
     margin-bottom: 30px;
     overflow-x: auto;
     scrollbar-width: none;
-}
-
-.media-slider-wrapper .media-image-list::-webkit-scrollbar {
+  }
+  
+  .slider-wrapper .image-list::-webkit-scrollbar {
     display: none;
-}
-
-.media-slider-wrapper .media-image-list .media-image-item {
-    width: 560px;
-    height: 315px;
+  }
+  
+  .slider-wrapper .image-list .image-item {
+    width: 325px;
+    height: 400px;
     object-fit: cover;
-}
-
-.media-slider-controls {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    margin-top: 20px; /* Added space above buttons */
-}
-
-.media-slider-controls .media-slide-button {
-    outline: none;
-    border: none;
-    height: 50px;
-    width: 50px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 2.2rem;
-    background: #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-}
-
-.media-slider-controls .media-slide-button:hover {
-    background: #404040;
-}
-
-.media-container .media-slider-scrollbar {
+  }
+  
+  .container .slider-scrollbar {
     height: 24px;
     width: 100%;
     display: flex;
     align-items: center;
-    margin-top: 15px;
-}
-
-.media-slider-scrollbar .media-scrollbar-track {
+  }
+  
+  .slider-scrollbar .scrollbar-track {
     background: #ccc;
     width: 100%;
     height: 2px;
@@ -257,13 +263,13 @@
     align-items: center;
     border-radius: 4px;
     position: relative;
-}
-
-.media-slider-scrollbar:hover .media-scrollbar-track {
+  }
+  
+  .slider-scrollbar:hover .scrollbar-track {
     height: 4px;
-}
-
-.media-slider-scrollbar .media-scrollbar-thumb {
+  }
+  
+  .slider-scrollbar .scrollbar-thumb {
     position: absolute;
     background: #000;
     top: 0;
@@ -272,37 +278,42 @@
     height: 100%;
     cursor: grab;
     border-radius: inherit;
-}
-
-.media-slider-scrollbar .media-scrollbar-thumb:active {
+  }
+  
+  .slider-scrollbar .scrollbar-thumb:active {
     cursor: grabbing;
     height: 8px;
     top: -2px;
-}
-
-.media-slider-scrollbar .media-scrollbar-thumb::after {
+  }
+  
+  .slider-scrollbar .scrollbar-thumb::after {
     content: "";
     position: absolute;
     left: 0;
     right: 0;
     top: -10px;
     bottom: -10px;
-}
-
-/* Styles for mobile and tablets */
-@media only screen and (max-width: 1023px) {
-    .media-slider-wrapper .media-image-list {
-        gap: 10px;
-        margin-bottom: 15px;
-        scroll-snap-type: x mandatory;
+  }
+  
+  /* Styles for mobile and tablets */
+  @media only screen and (max-width: 1023px) {
+    .slider-wrapper .slide-button {
+      display: none !important;
     }
-
-    .media-slider-wrapper .media-image-list .media-image-item {
-        width: 280px;
-        height: 200px;
+  
+    .slider-wrapper .image-list {
+      gap: 10px;
+      margin-bottom: 15px;
+      scroll-snap-type: x mandatory;
     }
-
-    .media-slider-scrollbar .media-scrollbar-thumb {
-        width: 20%;
+  
+    .slider-wrapper .image-list .image-item {
+      width: 280px;
+      height: 380px;
     }
-}
+  
+    .slider-scrollbar .scrollbar-thumb {
+      width: 20%;
+    }
+  }
+  
