--- a/css/footer.css
+++ b/css/footer.css
@@ -5,10 +5,9 @@
     justify-content: center;
 }
 .association-main-box .association-boxes{
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
-
     align-items: center;
     justify-content: space-evenly;
     gap: 20px;
@@ -20,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    width: 335px;
+    width: 340px;
     height: 260px;
     gap: 5px;
     border-radius: 4px;
@@ -70,7 +69,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 15px;
     width: 240px;
     padding: 10px 8px;
     border-radius: 10px;
@@ -111,6 +110,9 @@
 @media (max-width:620px) {
     .main-footer .main-footer-map>iframe{
         width: 100%;
+    }
+    .footer-info .info-details>span{
+        font-size: 16px;
     }
 }
 @media (max-width:381px) {
