--- a/css/slider.css
+++ b/css/slider.css
@@ -10,14 +10,12 @@
 .carousel-container {
   position: relative;
   width: 100%;
-  height: 550px;
-  /* Adjusted container height to match image height */
+  height: 470px;
   overflow: hidden;
   display: flex;
-  justify-content: center;
-  /* align-items: center; */
+  justify-content:center;
+  align-items:center;
   gap: 100px;
-  /* Increased space between images */
 }
 
 .image-fixed {
@@ -32,12 +30,14 @@
 }
 
 .carousel {
+  top: 60px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   position: relative;
   width: 100%;
   padding: 5px;
+  height: 100%;
 }
 
 .carousel-item {
