--- a/css/homepage.css
+++ b/css/homepage.css
@@ -14,7 +14,7 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #f3f3f3;
     transform: opacity 0.75s, visibility 0.75s;
     z-index: 1100;
   }
@@ -30,12 +30,12 @@
   #spin-text {
     display: inline-block;
     padding: 5px 0px;
-    color: #8BD8BD;
+    color: #00246B;
   }
   
   .spin-dot {
     position: absolute;
-    background-color: #243665;
+    background-color: #609aff;
     border-radius: 50%;
     width: 10px;
     height: 10px;
@@ -671,7 +671,7 @@
         left: 115px;
     }
     .main-profile-section .profile-dot-section{
-        bottom: 0px;
+        bottom: -10px;
         right: 0px;
         margin-right: 15px;
     }
@@ -722,6 +722,11 @@
     }
     .main-profile-section .profile-sec #profile-pic{
         left: 30px;
+    }
+    .main-profile-section .profile-dot-section{
+        bottom: -30px;
+        right: -10px;
+        margin-right: 20px;
     }
 }
 @media (max-width:391px) {
