--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -225,7 +225,7 @@
 .skills-box{
   max-width: 370px;
   width: 100%;
-  height: 400px;
+  height: 440px;
   background-color: rgba(202, 220, 252, 0.5);
   box-shadow: 0px 4px 4px 0px #00000040;
   border: 1px solid #CFCFCF;
@@ -278,8 +278,8 @@
 .skill-icon{
   display: flex;
   justify-content: center;
-  padding: 10px;
-  margin-bottom: 10px;
+  /* padding: 10px; */
+  /* margin-bottom: 10px; */
 }
 .skill .skill-head{
   font-family: Prompt;
