--- a/css/footer.css
+++ b/css/footer.css
@@ -18,13 +18,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     width: 340px;
     height: 260px;
     gap: 5px;
     border-radius: 4px;
     border: 1px 0px 0px 0px;
     padding: 20px;
+}
+.association-boxes .association-box>img{
+    width: 180px;
 }
 .association-boxes .association-box>div{
     font-family: Inter;
